--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -5,44 +5,56 @@
 }
 
 body{
-    background-color: black
+    background-color: rgb(202, 200, 200)
 }
 
 .nav-menu {
   background-color: #fff;
   top: 0;
+  padding: 6px;
   position: fixed;
   width: 100%;
-  padding: 1rem;
-  align-content: center;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px #000000;
+}
+
+.logo{
+    width: 3rem;
 }
 
 .logo img {
-    width: 50px;
+    width: 100%;
 }
 
 .nav-bar{
   position: absolute;
   right: 1rem;
   top: 1rem;
-  font-size: 2rem;  
+  font-size: 20pt;
+  color: black;
+
+}
+
+.nav-item{
+    display: none;
 }
 
 .list-item{
     list-style: none;
     margin-top: 2rem;
     display: block;
-    
+    margin-bottom: 1rem;
 }
 
 .list-item.active a{
 background-color: rgb(0, 0, 0);
 }
 .nav-link{
-    background-color: rgb(142, 142, 142);
+    background-color: rgb(5, 0, 141);
     display: block;
     color: #fff;
-    padding: .5rem;
+    padding: 1rem;
+    border-radius: 2rem;
     text-decoration: none;
     font-size: 12pt;
     font-family: "Roboto", serif;
@@ -55,12 +67,13 @@ background-color: rgb(0, 0, 0);
 /* give hover */
 
 .list-item.active a:hover{
-    background: none;
-    border: 1px solid black;
-    box-shadow: 5px 5px 5px #a9a9a9;
+    background-color: #003161;
+    box-shadow: 5px 5px 10px  #000000;
 }
 
 .nav-link:hover{
-    color: black;
-    background-color: cyan;
+    color: #fff;
+    background-color: #006A67;
+    box-shadow:5px 5px 5px #aaaaaa ;
 }
+
